[gd_scene load_steps=16 format=3 uid="uid://dxn08mrkon30g"]

[ext_resource type="Script" path="res://scenes/new_scenes/boss_script.gd" id="1_6sv8x"]
[ext_resource type="Texture2D" uid="uid://vb5rkwgwjhha" path="res://Sprites/enemies_sprites/Boss.png" id="1_df7rd"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_tmtg1"]
size = Vector2(20, 47)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_48f0e"]
radius = 14.9994
height = 88.0146

[sub_resource type="Animation" id="Animation_61r3s"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Spore_Sprite/Area2D/top_half:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-1, -11)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Spore_Sprite/Area2D/bottom_half:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-1, 19)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Spore_Sprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Spore_Sprite:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_ksaip"]
resource_name = "closing_mouth_animation"
length = 0.7
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Spore_Sprite/Area2D/top_half:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2(-1, -11), Vector2(-1, -11), Vector2(-1, -14), Vector2(-1, -19), Vector2(-1, -22), Vector2(-1, -27), Vector2(-1, -29)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Spore_Sprite/Area2D/bottom_half:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2(-1, 19), Vector2(-2, 28), Vector2(-2, 32), Vector2(-1, 37), Vector2(-1, 39), Vector2(-1, 44), Vector2(-1, 46)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Spore_Sprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6]
}

[sub_resource type="Animation" id="Animation_burky"]
resource_name = "mouth_closed"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Spore_Sprite/Area2D/top_half:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-1, -11)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Spore_Sprite/Area2D/bottom_half:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-1, 19)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Spore_Sprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_5ar7o"]
resource_name = "open_mouth"
length = 0.7
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Spore_Sprite/Area2D/top_half:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2(-1, -11), Vector2(-1, -11), Vector2(-1, -14), Vector2(-1, -19), Vector2(-1, -22), Vector2(-1, -27), Vector2(-1, -29)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Spore_Sprite/Area2D/bottom_half:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2(-1, 19), Vector2(-2, 28), Vector2(-2, 32), Vector2(-1, 37), Vector2(-1, 39), Vector2(-1, 44), Vector2(-1, 46)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Spore_Sprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6]
}

[sub_resource type="Animation" id="Animation_qsknj"]
resource_name = "stopped_mouth_open"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Spore_Sprite/Area2D/bottom_half:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 45)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Spore_Sprite/Area2D/top_half:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, -29)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Spore_Sprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [6]
}

[sub_resource type="Animation" id="Animation_on742"]
resource_name = "took_damage"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Spore_Sprite:modulate")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [Color(1, 1, 1, 1), Color(1, 0, 0, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ehssr"]
_data = {
"RESET": SubResource("Animation_61r3s"),
"closing_mouth_animation": SubResource("Animation_ksaip"),
"mouth_closed": SubResource("Animation_burky"),
"open_mouth": SubResource("Animation_5ar7o"),
"stopped_mouth_open": SubResource("Animation_qsknj"),
"took_damage": SubResource("Animation_on742")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_bhopf"]
radius = 35.0571

[sub_resource type="Animation" id="Animation_617xt"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Spore_Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_alcyi"]
resource_name = "took_damage"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Spore_Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 0, 0, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ir8ed"]
_data = {
"RESET": SubResource("Animation_617xt"),
"took_damage": SubResource("Animation_alcyi")
}

[node name="Spore" type="CharacterBody2D"]
collision_layer = 4
collision_mask = 4
script = ExtResource("1_6sv8x")
boss_name = "Spore"

[node name="Spore_Sprite" type="Sprite2D" parent="."]
texture = ExtResource("1_df7rd")
hframes = 7

[node name="stem_hb" type="Area2D" parent="Spore_Sprite"]

[node name="stem" type="CollisionShape2D" parent="Spore_Sprite/stem_hb"]
position = Vector2(0, 7.5)
shape = SubResource("RectangleShape2D_tmtg1")

[node name="Area2D" type="Area2D" parent="Spore_Sprite"]

[node name="bottom_half" type="CollisionShape2D" parent="Spore_Sprite/Area2D"]
position = Vector2(-1, 19)
rotation = -1.5708
shape = SubResource("CapsuleShape2D_48f0e")

[node name="top_half" type="CollisionShape2D" parent="Spore_Sprite/Area2D"]
position = Vector2(-1, -11)
rotation = -1.5708
shape = SubResource("CapsuleShape2D_48f0e")

[node name="spore_anim" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_ehssr")
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 8)
shape = SubResource("CircleShape2D_bhopf")
debug_color = Color(0.94902, 0, 0.580392, 0.419608)

[node name="move_timer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="stop_movement" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[node name="change_color" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_ir8ed")
}

[connection signal="area_entered" from="Spore_Sprite/stem_hb" to="." method="_on_stem_hb_area_entered"]
[connection signal="area_entered" from="Spore_Sprite/Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="area_exited" from="Spore_Sprite/Area2D" to="." method="_on_area_2d_area_exited"]
[connection signal="animation_finished" from="spore_anim" to="." method="_on_spore_anim_animation_finished"]
[connection signal="timeout" from="move_timer" to="." method="_on_move_timer_timeout"]
[connection signal="timeout" from="stop_movement" to="." method="_on_stop_movement_timeout"]
